Fixed Desktop Version like Facebook

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,7 +12,7 @@ a:hover{
 }
 .wrapper{
     margin: 10px auto;
-    width: 80%;
+    width: 1015px;
     background-color: #F7F0F0;
     height: auto;
     overflow: hidden;
